--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,3 +11,9 @@ artifacts:
 - path: vscode-portable.7z
 - path: 32bit_version.dll
 - path: 64bit_version.dll
+skip_commits:
+  files:
+    - 'LICENSE'
+    - '*.md'
+    - '.gitingore'
+    - '.gitattributes'
